# api/permissions/permissions_router.go
@@ -1,4 +1,4 @@
-package interns
+package permissions
 
 import (
 	"github.com/gin-gonic/gin"
@@ -6,39 +6,44 @@ import (
 )
 
 // InternRouterInit initializes the routes related to interns.
-func InternRouterInit(router *gin.RouterGroup, db *gorm.DB) {
+func PermissionRouterInit(router *gin.RouterGroup, db *gorm.DB) {
 
 	// Initialize database instance
 	baseInstance := Database{DB: db}
 
 	// Automigrate / Update table
-	NewInternRepository(db)
+	NewPermissionRepository(db)
+
 
 	/**
 
-IMPORTANT:
-The user ID represents the unique identifier of an employee who holds the role of former intern groups.
-Please ensure that appropriate permissions and access controls are in place for this user.
-*/
+	IMPORTANT:
+	The user ID represents the unique identifier of an employee who holds the role of former intern groups.
+	Please ensure that appropriate permissions and access controls are in place for this user.
+	*/
 	// Private
-	interns := router.Group("/interns/:companyID")
+	permissions := router.Group("/permissions/:companyID")
 	{
 
 		// POST endpoint to create a new intern
-		interns.POST("/add/:supervisorID", baseInstance.CreatePermission)
+		permissions.POST("/:featureID/:roleID", baseInstance.CreatePermission)
 
-		// GET endpoint to retrieve all interns for a specific company and a specific user 
-		interns.GET("", baseInstance.ReadPermissions)
+		// GET endpoint to retrieve all interns for a specific company and a specific user
+		permissions.GET("", baseInstance.ReadPermissions)
+
 		// GET endpoint to retrieve the count of interns for a specific company
-		interns.GET("/count", baseInstance.ReadPermissionCount)
+		permissions.GET("/count", baseInstance.ReadPermissionCount)
 
 		// GET endpoint to retrieve details of a specific intern
-		interns.GET("/intern/:internID", baseInstance.ReadPermission)
+		permissions.GET("/permission/:permissionID", baseInstance.ReadPermission)
 
 		// PUT endpoint to update details of a specific intern
-		interns.PUT("/update/:internID", baseInstance.UpdatePermission)
+		permissions.PUT("/update/:permissionID", baseInstance.UpdatePermission)
 
 		// DELETE endpoint to delete a specific intern
-		interns.DELETE("/delete/:internID", baseInstance.DeletePermission)
+		permissions.DELETE("/delete/:permissionID", baseInstance.DeletePermission)
+
+
 	}
+
 }
