# docs/swagger.yaml
@@ -867,6 +867,93 @@ definitions:
     required:
     - seen
     type: object
+  PermissionIn:
+    description: PermissionIn represents the input structure for creating a new intern.
+    properties:
+      create_perm:
+        description: Firstname is the first name of the intern. It is required and
+          should be between 3 and 30 characters.
+        type: boolean
+      delete_perm:
+        description: intern's education level
+        type: boolean
+      feature_name:
+        type: string
+      read_perm:
+        description: Lastname is the last name of the intern. It is required and should
+          be between 3 and 35 characters.
+        type: boolean
+      update_perm:
+        description: Email is the email address of the intern. It is required, should
+          be a valid email, and maximum length is 255 characters.
+        type: boolean
+    type: object
+  PermissionPagination:
+    description: PermissionPagination represents the paginated list of interns.
+    properties:
+      items:
+        description: Items is a slice containing individual intern details.
+        items:
+          $ref: '#/definitions/PermissionTable'
+        type: array
+      limit:
+        description: Limit is the maximum number of items per page in the pagination.
+        type: integer
+      page:
+        description: Page is the current page number in the pagination.
+        type: integer
+      totalCount:
+        description: TotalCount is the total number of interns in the entire list.
+        type: integer
+    type: object
+  PermissionTable:
+    description: PermissionTable represents a single intern entry in a table.
+    properties:
+      create_perm:
+        description: Firstname is the first name of the intern. It is required and
+          should be between 3 and 30 characters.
+        type: boolean
+      delete_perm:
+        description: intern's education level
+        type: boolean
+      feature_name:
+        type: string
+      id:
+        description: ID is the unique identifier for the intern.
+        type: string
+      read_perm:
+        description: Lastname is the last name of the intern. It is required and should
+          be between 3 and 35 characters.
+        type: boolean
+      update_perm:
+        description: Email is the email address of the intern. It is required, should
+          be a valid email, and maximum length is 255 characters.
+        type: boolean
+    type: object
+  PermissionsDetails:
+    description: PermissionsDetails represents detailed information about a specific
+      intern.
+    properties:
+      create_perm:
+        description: Firstname is the first name of the intern. It is required and
+          should be between 3 and 30 characters.
+        type: boolean
+      delete_perm:
+        description: intern's education level
+        type: boolean
+      feature_name:
+        type: string
+      id:
+        type: string
+      read_perm:
+        description: Lastname is the last name of the intern. It is required and should
+          be between 3 and 35 characters.
+        type: boolean
+      update_perm:
+        description: Email is the email address of the intern. It is required, should
+          be a valid email, and maximum length is 255 characters.
+        type: boolean
+    type: object
   PresencesCount:
     description: PresencesCount represents the count of presences.
     properties:
@@ -1057,20 +1144,14 @@ definitions:
         type: integer
     type: object
   QuestionsTable:
-    description: QuestionsTable represents a single question entry in a table.
+    description: TestsTable represents a single question entry in a table.
     properties:
       associatedTechnology:
         description: Associated technology or subject for the question
         type: string
-      correctAnswer:
-        description: The correct answer to the question
-        type: string
       createdAt:
-        description: CreatedAt is the timestamp indicating when the question entry
-          was created.
-        type: string
-      id:
-        description: ID is the unique identifier for the question.
+        description: CreatedAt is the timestamp indicating when the test entry was
+          created.
         type: string
       options:
         description: The options of the question
@@ -1079,6 +1160,9 @@ definitions:
         type: array
       question:
         description: The text of the question
+        type: string
+      questionID:
+        description: The questionID associated with the question
         type: string
     type: object
   RolesCount:
@@ -1559,32 +1643,24 @@ definitions:
         type: integer
     type: object
   UsersTable:
-    description: UsersTable represents a single project entry in a table.
+    description: UsersTable represents a single user entry in a table.
     properties:
-      code:
-        description: code is the code of pfe project
+      createdAt:
+        description: CreatedAt is the timestamp indicating when the user entry was
+          created.
         type: string
-      companyID:
-        description: CompanyID is the unique identifier for the company associated
-          with the project. It is required.
+      email:
+        description: Email is the email address of the user.
         type: string
-      expdate:
-        description: expdate is the timestamp indicating when the project entry will
-          ends.
+      firstname:
+        description: Firstname is the first name of the user.
         type: string
       id:
-        description: ID is the unique identifier for the project.
+        description: ID is the unique identifier for the user.
         type: string
-      projectname:
-        description: projectname is the  name of the project. It is required .
+      lastname:
+        description: Lastname is the last name of the user.
         type: string
-      speciality:
-        type: string
-      technologies:
-        description: technologies required to develop the project
-        items:
-          type: string
-        type: array
     type: object
   codeProject:
     description: codeProject represents code project about a specific project.
@@ -1612,6 +1688,13 @@ definitions:
       status:
         description: Status of the LoanRequest request (e.g., pending, approved, rejected).
         type: string
+    type: object
+  permissionCount:
+    description: permissionCount represents the count of interns.
+    properties:
+      count:
+        description: Count is the number of interns.
+        type: integer
     type: object
   projectsDetails:
     description: projectsDetails represents detailed information about a specific
@@ -5070,6 +5153,277 @@ paths:
       summary: Get notifications count
       tags:
       - Notifications
+  /permissions/{companyID}:
+    get:
+      description: Get all permissions.
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: companyID
+        in: path
+        name: companyID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/PermissionPagination'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get permissions
+      tags:
+      - Permissions
+  /permissions/{companyID}/{featureID}/{roleID}:
+    post:
+      consumes:
+      - application/json
+      description: Create a new permission.
+      parameters:
+      - description: companyID
+        in: path
+        name: companyID
+        required: true
+        type: string
+      - description: roleID
+        in: path
+        name: roleID
+        required: true
+        type: string
+      - description: featureID
+        in: path
+        name: featureID
+        required: true
+        type: string
+      - description: PermissionIn query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/PermissionIn'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: MissionOrdersal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create permission
+      tags:
+      - Permissions
+  /permissions/{companyID}/count:
+    get:
+      description: Get number of all permissions.
+      parameters:
+      - description: 'companyID '
+        in: path
+        name: companyID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/permissionCount'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get number of  permissions
+      tags:
+      - Permissions
+  /permissions/{companyID}/delete/{permissionID}:
+    delete:
+      description: Delete one permission.
+      parameters:
+      - description: companyID
+        in: path
+        name: companyID
+        required: true
+        type: string
+      - description: permissionID
+        in: path
+        name: permissionID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete permission
+      tags:
+      - Permissions
+  /permissions/{companyID}/permission/{permissionID}:
+    get:
+      description: Get one permission.
+      parameters:
+      - description: company ID
+        in: path
+        name: companyID
+        required: true
+        type: string
+      - description: 'permissionID '
+        in: path
+        name: permissionID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/PermissionsDetails'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get permission
+      tags:
+      - Permissions
+  /permissions/{companyID}/update/{permissionID}:
+    put:
+      consumes:
+      - application/json
+      description: Update permission.
+      parameters:
+      - description: companyID
+        in: path
+        name: companyID
+        required: true
+        type: string
+      - description: permissionID
+        in: path
+        name: permissionID
+        required: true
+        type: string
+      - description: permission query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/PermissionIn'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ApiResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update permission
+      tags:
+      - Permissions
   /presences/{companyID}/{userID}:
     post:
       consumes:
